--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <div class="main">
   <form action="" method="POST" class="form" id="register-form">
    <h3 class="heading">Thành viên đăng ký</h3>
-   <p class="desc">Cùng nhau học lập trình miễn phí tại F8 ❤️</p>
+   <p class="desc">Cùng học bài nào</p>
    <div class="spacer"></div>
    <div class="form-group">
     <label for="fullname" class="form-label">Tên đầy đủ</label>
