--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <div class="spacer"></div>
    <div class="form-group">
     <label for="fullname" class="form-label">Tên đầy đủ</label>
-    <input id="fullname" name="fullname" rules="Required" type="text" placeholder="VD: Sơn Đặng" class="form-control">
+    <input id="fullname" name="fullname" rules="Required" type="text" placeholder="VD: Đại Thành" class="form-control">
     <span class="form-message"></span>
    </div>
    <div class="form-group">
